@@ -119,6 +119,12 @@ public final class Pattern implements Serializable {
   private final transient String prefix;
   private final transient boolean prefixFoldCase;
   private final transient String literalMatch;
+  private final transient byte[] literalMatchUtf8;
+  private final transient int[] literalMatchFailure;
+  private final transient int[] literalMatchShifts;
+  private final transient byte[] prefixUtf8;
+  private final transient int[] prefixUtf8Failure;
+  private final transient int[] prefixUtf8Shifts;
   private final transient boolean hasLazy;
   private final transient boolean hasAlternation;
   private final transient boolean hasNullableAlternation;
@@ -160,10 +166,10 @@ public final class Pattern implements Serializable {
   private final transient long singleCharClassBitmap1;
 
   /**
-   * Precomputed character class data for a mandatory character class in a full-match pattern.
-   * Non-null when {@code matches()} can reject by scanning for an absent required code point before
-   * invoking the full engine cascade. This is intentionally a negative-only accelerator: if the
-   * class is present, normal matching still determines the result.
+   * Precomputed character class data for a mandatory character class. Non-null when matching can
+   * reject by scanning for an absent required code point before invoking the full engine cascade.
+   * This is intentionally a negative-only accelerator: if the class is present, normal matching
+   * still determines the result.
    */
   private final transient int[] requiredMatchClassRanges;
 
@@ -171,11 +177,29 @@ public final class Pattern implements Serializable {
   private final transient long requiredMatchClassBitmap1;
 
   /**
+   * A case-sensitive literal substring that every match must contain. This is a negative-only
+   * accelerator: an absent literal rejects the search, while a present literal still goes through
+   * the normal engine to determine match boundaries and captures.
+   */
+  private final transient String requiredLiteral;
+
+  private final transient byte[] requiredLiteralUtf8;
+  private final transient int[] requiredLiteralFailure;
+  private final transient int[] requiredLiteralShifts;
+
+  /**
    * Lazily computed OnePass analysis results. Holds the OnePass automaton (if eligible) and derived
    * flags ({@code canOnePassFind}, {@code canOnePassSubmatch}). Computed on first access to avoid
    * paying the OnePass BFS cost at compile time.
    */
   private transient volatile OnePassAnalysis onePassAnalysis;
+
+  /**
+   * Whether a matcher created from this pattern has requested an inner capture. This adaptive
+   * signal lets later small-input match operations avoid a redundant DFA pass when capture
+   * extraction is demonstrably part of the workload.
+   */
+  private transient volatile boolean innerCapturesObserved;
 
   /**
    * Lazily computed DFA equivalence-class setup for the forward program. Shared across all Matcher
@@ -262,6 +286,7 @@ public final class Pattern implements Serializable {
       int[] requiredMatchClassRanges,
       long requiredMatchClassBitmap0,
       long requiredMatchClassBitmap1,
+      String requiredLiteral,
       EnginePathOptions enginePathOptions) {
     this.patternId = nextPatternId();
     this.pattern = pattern;
@@ -292,7 +317,19 @@ public final class Pattern implements Serializable {
     this.namedGroups = namedGroups;
     this.prefix = prefix;
     this.prefixFoldCase = prefixFoldCase;
+    this.prefixUtf8 =
+        prefix == null || prefix.isEmpty()
+            ? null
+            : prefix.getBytes(java.nio.charset.StandardCharsets.UTF_8);
+    this.prefixUtf8Failure = prefixUtf8 == null ? null : literalFailure(prefixUtf8);
+    this.prefixUtf8Shifts = prefixUtf8 == null ? null : literalShifts(prefixUtf8);
     this.literalMatch = literalMatch;
+    this.literalMatchUtf8 =
+        literalMatch == null
+            ? null
+            : literalMatch.getBytes(java.nio.charset.StandardCharsets.UTF_8);
+    this.literalMatchFailure = literalMatchUtf8 == null ? null : literalFailure(literalMatchUtf8);
+    this.literalMatchShifts = literalMatchUtf8 == null ? null : literalShifts(literalMatchUtf8);
     this.hasLazy = hasLazy;
     this.hasAlternation = hasAlternation;
     this.hasNullableAlternation = hasNullableAlternation;
@@ -313,6 +350,15 @@ public final class Pattern implements Serializable {
     this.requiredMatchClassRanges = requiredMatchClassRanges;
     this.requiredMatchClassBitmap0 = requiredMatchClassBitmap0;
     this.requiredMatchClassBitmap1 = requiredMatchClassBitmap1;
+    this.requiredLiteral = requiredLiteral;
+    this.requiredLiteralUtf8 =
+        requiredLiteral == null
+            ? null
+            : requiredLiteral.getBytes(java.nio.charset.StandardCharsets.UTF_8);
+    this.requiredLiteralFailure =
+        requiredLiteralUtf8 == null ? null : literalFailure(requiredLiteralUtf8);
+    this.requiredLiteralShifts =
+        requiredLiteralUtf8 == null ? null : literalShifts(requiredLiteralUtf8);
 
     // Eagerly compute analysis and setup to avoid latency spikes on first use.
     onePassAnalysis();
@@ -428,7 +474,9 @@ public final class Pattern implements Serializable {
     // Detect "repeated character class" pattern for matches() fast path.
     CharClassMatchInfo ccMatch = extractCharClassMatch(metadataAst);
     CharClassScanInfo singleCharClass = extractSingleCharClass(metadataAst);
-    CharClassScanInfo requiredMatchClass = extractRequiredMatchClass(metadataAst);
+    CharClassScanInfo requiredMatchClass =
+        extractRequiredMatchClass(metadataAst, prefix == null && ccPrefixAscii == null);
+    String requiredLiteral = prefix == null ? extractRequiredLiteral(metadataAst) : null;
     // OnePass analysis and DFA setup are deferred to first use (lazy initialization).
     return new Pattern(
         regex,
@@ -458,6 +506,7 @@ public final class Pattern implements Serializable {
         requiredMatchClass != null ? requiredMatchClass.ranges : null,
         requiredMatchClass != null ? requiredMatchClass.bitmap0 : 0,
         requiredMatchClass != null ? requiredMatchClass.bitmap1 : 0,
+        requiredLiteral,
         enginePathOptions);
   }
 
@@ -524,6 +573,104 @@ public final class Pattern implements Serializable {
    */
   public Matcher matcher(CharSequence input) {
     return new Matcher(this, input);
+  }
+
+  /**
+   * Creates a matcher over UTF-8 input whose positions are relative byte offsets.
+   *
+   * @param input borrowed UTF-8 input retained for the lifetime of the matcher
+   * @return a new, non-thread-safe UTF-8 matcher
+   */
+  public Utf8Matcher matcher(Utf8Input input) {
+    return new Utf8Matcher(this, input);
+  }
+
+  /**
+   * Returns whether this pattern occurs in the supplied UTF-8 input.
+   *
+   * @param input borrowed UTF-8 input retained only for this call
+   * @return whether the pattern occurs
+   */
+  public boolean find(Utf8Input input) {
+    ArrayUtf8Input arrayInput = (ArrayUtf8Input) Objects.requireNonNull(input, "input");
+    Utf8InputScanner scanner = arrayInput.scanner();
+    int length = scanner.length();
+    if (literalMatchUtf8 != null && !prefixFoldCase) {
+      return scanner.indexOf(literalMatchUtf8, literalMatchFailure, literalMatchShifts) >= 0;
+    }
+    if (enginePathOptions.literalFastPaths()
+        && requiredLiteralUtf8 != null
+        && prefixUtf8 == null
+        && scanner.indexOf(requiredLiteralUtf8, requiredLiteralFailure, requiredLiteralShifts, 0)
+            < 0) {
+      return false;
+    }
+    if (enginePathOptions.charClassMatchFastPaths()
+        && requiredMatchClassRanges != null
+        && prefixUtf8 == null
+        && charClassPrefixAscii == null
+        && scanner.indexOfCodePointClass(
+                requiredMatchClassRanges, requiredMatchClassBitmap0, requiredMatchClassBitmap1, 0)
+            < 0) {
+      return false;
+    }
+    int searchStart = 0;
+    if (prefixUtf8 != null && !prefixFoldCase) {
+      searchStart = scanner.indexOf(prefixUtf8, prefixUtf8Failure, prefixUtf8Shifts);
+      if (searchStart < 0) {
+        return false;
+      }
+    } else if (!prog.hasWordBoundary() && charClassPrefixAscii != null) {
+      searchStart = scanner.indexOfAsciiClass(charClassPrefixAscii, 0);
+      if (searchStart < 0) {
+        return false;
+      }
+    }
+    if (!prog.anchorEnd() && !prog.hasGraphemeSemantics() && prog.numLoopRegs() == 0) {
+      Dfa.SearchResult result = forwardFirstMatchDfa().doSearch(scanner, searchStart, false, false);
+      if (result != null) {
+        return result.matched();
+      }
+    }
+    return Nfa.search(
+            prog,
+            scanner,
+            searchStart,
+            length,
+            length,
+            0,
+            Nfa.Anchor.UNANCHORED,
+            Nfa.MatchKind.FIRST_MATCH,
+            0,
+            null)
+        != null;
+  }
+
+  private static int[] literalFailure(byte[] literal) {
+    int[] failure = new int[literal.length];
+    int matched = 0;
+    for (int index = 1; index < literal.length; index++) {
+      while (matched > 0 && literal[index] != literal[matched]) {
+        matched = failure[matched - 1];
+      }
+      if (literal[index] == literal[matched]) {
+        matched++;
+      }
+      failure[index] = matched;
+    }
+    return failure;
+  }
+
+  private static int[] literalShifts(byte[] literal) {
+    if (literal.length < 2) {
+      return null;
+    }
+    int[] shifts = new int[256];
+    java.util.Arrays.fill(shifts, literal.length);
+    for (int index = 0; index < literal.length - 1; index++) {
+      shifts[literal[index] & 0xFF] = literal.length - index - 1;
+    }
+    return shifts;
   }
 
   /**
@@ -735,6 +882,16 @@ public final class Pattern implements Serializable {
     return enginePathOptions;
   }
 
+  boolean innerCapturesObserved() {
+    return innerCapturesObserved;
+  }
+
+  void recordInnerCaptureAccess() {
+    if (!innerCapturesObserved) {
+      innerCapturesObserved = true;
+    }
+  }
+
   /** Returns the thread-local cached BitState, or null if none has been cached yet. */
   BitState borrowBitState() {
     BitState bs = cachedBitState.get();
@@ -744,6 +901,7 @@ public final class Pattern implements Serializable {
 
   /** Returns a BitState to the thread-local cache for reuse by future Matchers. */
   void returnBitState(BitState bs) {
+    bs.releaseInput();
     cachedBitState.set(bs);
   }
 
@@ -1000,10 +1158,7 @@ public final class Pattern implements Serializable {
     return singleCharClassBitmap1;
   }
 
-  /**
-   * Returns precomputed ranges for a required character class in {@code matches()}, or {@code
-   * null}.
-   */
+  /** Returns precomputed ranges for a required character class, or {@code null}. */
   int[] requiredMatchClassRanges() {
     return requiredMatchClassRanges;
   }
@@ -1016,6 +1171,22 @@ public final class Pattern implements Serializable {
   /** ASCII bitmap (code points 64–127) for the required-character-class fast path. */
   long requiredMatchClassBitmap1() {
     return requiredMatchClassBitmap1;
+  }
+
+  String requiredLiteral() {
+    return requiredLiteral;
+  }
+
+  byte[] requiredLiteralUtf8() {
+    return requiredLiteralUtf8;
+  }
+
+  int[] requiredLiteralFailure() {
+    return requiredLiteralFailure;
+  }
+
+  int[] requiredLiteralShifts() {
+    return requiredLiteralShifts;
   }
 
   /**
@@ -1095,6 +1266,30 @@ public final class Pattern implements Serializable {
    */
   String literalMatch() {
     return literalMatch;
+  }
+
+  byte[] literalMatchUtf8() {
+    return literalMatchUtf8;
+  }
+
+  int[] literalMatchFailure() {
+    return literalMatchFailure;
+  }
+
+  int[] literalMatchShifts() {
+    return literalMatchShifts;
+  }
+
+  byte[] prefixUtf8() {
+    return prefixUtf8;
+  }
+
+  int[] prefixUtf8Failure() {
+    return prefixUtf8Failure;
+  }
+
+  int[] prefixUtf8Shifts() {
+    return prefixUtf8Shifts;
   }
 
   /** Returns {@code true} if this pattern is a simple literal with no metacharacters. */
@@ -1719,19 +1914,25 @@ public final class Pattern implements Serializable {
     }
   }
 
-  /** Fast-path data for {@code (?i)\b(keyword|...)\b}. */
+  /** Fast-path data for {@code (?i)\b(keyword|...)\b} and its greedy whole-input form. */
   static final class KeywordAlternation {
     final String[] keywords;
     final boolean[] firstAscii;
     final int captureGroup;
     final boolean unicodeWordBoundary;
+    final boolean greedyWholeInput;
 
     KeywordAlternation(
-        String[] keywords, boolean[] firstAscii, int captureGroup, boolean unicodeWordBoundary) {
+        String[] keywords,
+        boolean[] firstAscii,
+        int captureGroup,
+        boolean unicodeWordBoundary,
+        boolean greedyWholeInput) {
       this.keywords = keywords;
       this.firstAscii = firstAscii;
       this.captureGroup = captureGroup;
       this.unicodeWordBoundary = unicodeWordBoundary;
+      this.greedyWholeInput = greedyWholeInput;
     }
   }
 
@@ -1932,12 +2133,22 @@ public final class Pattern implements Serializable {
     }
 
     Regexp node = unwrapImplicitCapture(re);
-    if (node == null || node.op != RegexpOp.CONCAT || node.nsub() != 3) {
+    if (node == null || node.op != RegexpOp.CONCAT) {
       return null;
     }
-    Regexp before = unwrapImplicitCapture(node.subs.get(0));
-    Regexp middle = unwrapImplicitCapture(node.subs.get(1));
-    Regexp after = unwrapImplicitCapture(node.subs.get(2));
+    boolean greedyWholeInput = false;
+    int coreOffset = 0;
+    if (node.nsub() == 5
+        && isGreedyAnyCharStar(node.subs.getFirst())
+        && isGreedyAnyCharStar(node.subs.getLast())) {
+      greedyWholeInput = true;
+      coreOffset = 1;
+    } else if (node.nsub() != 3) {
+      return null;
+    }
+    Regexp before = unwrapImplicitCapture(node.subs.get(coreOffset));
+    Regexp middle = unwrapImplicitCapture(node.subs.get(coreOffset + 1));
+    Regexp after = unwrapImplicitCapture(node.subs.get(coreOffset + 2));
     if (before == null
         || before.op != RegexpOp.WORD_BOUNDARY
         || after == null
@@ -1972,7 +2183,16 @@ public final class Pattern implements Serializable {
     }
 
     boolean unicodeWordBoundary = (before.flags & ParseFlags.UNICODE_CHAR_CLASS) != 0;
-    return new KeywordAlternation(keywords, firstAscii, captureGroup, unicodeWordBoundary);
+    return new KeywordAlternation(
+        keywords, firstAscii, captureGroup, unicodeWordBoundary, greedyWholeInput);
+  }
+
+  private static boolean isGreedyAnyCharStar(Regexp re) {
+    Regexp node = unwrapImplicitCapture(re);
+    return node != null
+        && node.op == RegexpOp.STAR
+        && !node.nonGreedy()
+        && node.sub().op == RegexpOp.ANY_CHAR;
   }
 
   private static boolean hasOtherUserCaptures(Regexp re, int allowedCapture) {
@@ -2212,18 +2432,20 @@ public final class Pattern implements Serializable {
 
     Regexp inner = node.sub();
 
-    // The quantified element must be a character class.
-    if (inner.op != RegexpOp.CHAR_CLASS || inner.charClass == null) {
-      return null;
-    }
-
     // Reject if the original pattern has user capture groups — the fast path only produces
     // group 0, so it can't provide group(1) etc.
     if (hasUserCaptures(re)) {
       return null;
     }
 
-    CharClass cc = inner.charClass;
+    CharClass cc;
+    if (inner.op == RegexpOp.CHAR_CLASS && inner.charClass != null) {
+      cc = inner.charClass;
+    } else if (inner.op == RegexpOp.LITERAL) {
+      cc = literalCharClass(inner.rune, inner.flags);
+    } else {
+      return null;
+    }
     if (cc.isEmpty()) {
       return null;
     }
@@ -2272,35 +2494,37 @@ public final class Pattern implements Serializable {
   }
 
   /**
-   * Detects a mandatory character class in a full-match pattern, such as {@code .*\\s+.*}. The
-   * resulting class is only used to reject inputs that contain no matching code point; positive
-   * results still go through the normal engine to preserve full regex semantics.
+   * Detects a mandatory character class, such as the whitespace in {@code .*\\s+.*}. The resulting
+   * class is only used to reject inputs that contain no matching code point; positive results still
+   * go through the normal engine to preserve full regex semantics.
+   *
+   * <p>Alternation is inspected only when no start-character accelerator was found. For a leading
+   * alternation, its union is already represented more precisely by that accelerator; constructing
+   * the same union again would add compile-time work without improving searches.
    */
-  private static CharClassScanInfo extractRequiredMatchClass(Regexp re) {
-    if (hasUserCaptures(re)) {
+  private static CharClassScanInfo extractRequiredMatchClass(
+      Regexp re, boolean inspectAlternation) {
+    Regexp node = unwrapRequiredNode(re);
+    if (node == null) {
       return null;
     }
-    Regexp node = re;
-    if (node.op == RegexpOp.CAPTURE && node.cap == 0) {
-      node = node.sub();
-    }
     if (node.op != RegexpOp.CONCAT || node.subs == null) {
-      CharClass cc = requiredCharClass(node);
-      return cc != null ? buildCharClassScanInfo(cc) : null;
+      CharClass required = requiredCharClass(node, inspectAlternation);
+      return required != null ? buildCharClassScanInfo(required) : null;
     }
     for (Regexp sub : node.subs) {
-      CharClass cc = requiredCharClass(sub);
-      if (cc != null) {
-        return buildCharClassScanInfo(cc);
+      CharClass required = requiredCharClass(sub, inspectAlternation);
+      if (required != null) {
+        return buildCharClassScanInfo(required);
       }
     }
     return null;
   }
 
-  private static CharClass requiredCharClass(Regexp re) {
-    Regexp node = re;
-    if (node.op == RegexpOp.NON_CAPTURE) {
-      node = node.sub();
+  private static CharClass requiredCharClass(Regexp re, boolean inspectAlternation) {
+    Regexp node = unwrapRequiredNode(re);
+    if (node == null) {
+      return null;
     }
     if (node.op == RegexpOp.LITERAL) {
       return literalCharClass(node.rune, node.flags);
@@ -2311,13 +2535,101 @@ public final class Pattern implements Serializable {
     if (node.op == RegexpOp.CHAR_CLASS && node.charClass != null) {
       return node.charClass.isEmpty() ? null : node.charClass;
     }
-    if ((node.op == RegexpOp.PLUS || (node.op == RegexpOp.REPEAT && node.min > 0))
-        && node.sub().op == RegexpOp.CHAR_CLASS
-        && node.sub().charClass != null
-        && !node.sub().charClass.isEmpty()) {
-      return node.sub().charClass;
+    if (inspectAlternation
+        && node.op == RegexpOp.ALTERNATE
+        && node.subs != null
+        && !node.subs.isEmpty()) {
+      CharClassBuilder union = new CharClassBuilder();
+      for (Regexp branch : node.subs) {
+        CharClass branchClass = requiredAtomicCharClass(branch);
+        if (branchClass == null) {
+          return null;
+        }
+        union.addCharClass(branchClass);
+      }
+      CharClass result = union.build();
+      return result.isEmpty() ? null : result;
     }
     return null;
+  }
+
+  private static CharClass requiredAtomicCharClass(Regexp re) {
+    Regexp node = unwrapRequiredNode(re);
+    if (node == null) {
+      return null;
+    }
+    if (node.op == RegexpOp.LITERAL) {
+      return literalCharClass(node.rune, node.flags);
+    }
+    if (node.op == RegexpOp.LITERAL_STRING && node.runes != null && node.runes.length > 0) {
+      return literalCharClass(node.runes[0], node.flags);
+    }
+    if (node.op == RegexpOp.CHAR_CLASS && node.charClass != null && !node.charClass.isEmpty()) {
+      return node.charClass;
+    }
+    return null;
+  }
+
+  private static Regexp unwrapRequiredNode(Regexp re) {
+    Regexp node = re;
+    while (true) {
+      if (node.op == RegexpOp.CAPTURE
+          || node.op == RegexpOp.NON_CAPTURE
+          || node.op == RegexpOp.PLUS) {
+        node = node.sub();
+        continue;
+      }
+      if (node.op == RegexpOp.REPEAT) {
+        if (node.min == 0) {
+          return null;
+        }
+        node = node.sub();
+        continue;
+      }
+      return node;
+    }
+  }
+
+  /**
+   * Finds the longest case-sensitive literal substring that every match must contain.
+   *
+   * <p>The worklist descends only through operators whose children are mandatory: concatenation,
+   * transparent groups, and repetitions with a positive minimum. It deliberately stops at
+   * alternation and optional repetition, so the result can only reject inputs that cannot match.
+   */
+  private static String extractRequiredLiteral(Regexp re) {
+    String longest = null;
+    Deque<Regexp> pending = new ArrayDeque<>();
+    pending.addLast(re);
+    while (!pending.isEmpty()) {
+      Regexp node = pending.removeLast();
+      switch (node.op) {
+        case CAPTURE, NON_CAPTURE, PLUS -> pending.addLast(node.sub());
+        case REPEAT -> {
+          if (node.min > 0) {
+            pending.addLast(node.sub());
+          }
+        }
+        case CONCAT -> {
+          if (node.subs != null) {
+            for (Regexp sub : node.subs) {
+              pending.addLast(sub);
+            }
+          }
+        }
+        case LITERAL_STRING -> {
+          if ((node.flags & ParseFlags.FOLD_CASE) == 0
+              && node.runes != null
+              && node.runes.length >= 2
+              && (longest == null
+                  || node.runes.length > longest.codePointCount(0, longest.length()))) {
+            longest = new String(node.runes, 0, node.runes.length);
+          }
+        }
+        default -> {}
+      }
+    }
+    return longest;
   }
 
   private static CharClass literalCharClass(int cp, int flags) {
